--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
             <div class="d-flex align-items-center justify-content-center overflow-hidden position-relative client-box bg-white min-h-100px card__bg-rd">
               <div class="full__bg--card">
                 <img src="images/home/full-bg-icon-1.png" alt="" />
-                <p class="mb-0 full__bg--card--font">Ücretsiz Ev Teslimatı</p>
+                <p class="mb-0 full__bg--card--font">Güvenilirlik</p>
               </div>
             </div>
           </div>
@@ -270,7 +270,7 @@
             <div class="d-flex align-items-center justify-content-center overflow-hidden position-relative client-box box-shadow-extra-large bg-white min-h-100px card__bg-rd">
               <div class="full__bg--card">
                 <img src="images/home/full-bg-icon-2.png" alt="" />
-                <p class="mb-0 full__bg--card--font">Güvenli Ödeme</p>
+                <p class="mb-0 full__bg--card--font">Samimiyet</p>
               </div>
             </div>
           </div>
@@ -279,7 +279,7 @@
             <div class="d-flex align-items-center justify-content-center overflow-hidden position-relative client-box box-shadow-extra-large bg-white min-h-100px card__bg-rd">
               <div class="full__bg--card">
                 <img src="images/home/full-bg-icon-3.png" alt="" />
-                <p class="mb-0 full__bg--card--font">Sipariş İndirimi</p>
+                <p class="mb-0 full__bg--card--font">Kalite</p>
               </div>
             </div>
           </div>
@@ -288,7 +288,7 @@
             <div class="d-flex align-items-center justify-content-center overflow-hidden position-relative client-box bg-white min-h-100px card__bg-rd">
               <div class="full__bg--card">
                 <img src="images/home/full-bg-icon-4.png" alt="" />
-                <p class="mb-0 full__bg--card--font">7/24 Çevrimiçi Destek</p>
+                <p class="mb-0 full__bg--card--font">Kararlılık</p>
               </div>
             </div>
           </div>
@@ -339,7 +339,7 @@
                             </a>
                           </div>
                           <div class="shop-footer text-center pt-20px">
-                            <a href="single-product.html" class="text-dark-gray fs-17 alt-font fw-600">Lokum</a>
+                            <a href="single-product.html" class="text-dark-gray fs-17 alt-font fw-600">Gıda</a>
                           </div>
                         </div>
                       </li>
@@ -353,7 +353,7 @@
                             </a>
                           </div>
                           <div class="shop-footer text-center pt-20px">
-                            <a href="single-product.html" class="text-dark-gray fs-17 alt-font fw-600">Makarna</a>
+                            <a href="single-product.html" class="text-dark-gray fs-17 alt-font fw-600">Aksesuar</a>
                           </div>
                         </div>
                       </li>
@@ -367,7 +367,7 @@
                             </a>
                           </div>
                           <div class="shop-footer text-center pt-20px">
-                            <a href="single-product.html" class="text-dark-gray fs-17 alt-font fw-600">Sandalet</a>
+                            <a href="single-product.html" class="text-dark-gray fs-17 alt-font fw-600">Endüstiriyel Ürünler</a>
                           </div>
                         </div>
                       </li>
