--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
               class="nav nav-tabs border-0 justify-content-center text-uppercase fw-600 mb-50px sm-mb-20px alt-font fs-32 ls-minus-05px text-transform-none"
               data-anime='{ "el": "childs", "translateY": [50, 0], "opacity": [0,1], "duration": 600, "delay":100, "staggervalue": 150, "easing": "easeOutQuad" }'>
               <li class="nav-item">
-                <a data-bs-toggle="tab" href="#tab_five1" class="nav-link active">Popüler Kategoriler<span class="tab-border bg-dark-gray h-2px"></span></a>
+                <a data-bs-toggle="tab" href="#tab_five1" class="nav-link active">Kategoriler<span class="tab-border bg-dark-gray h-2px"></span></a>
               </li>
             </ul>
             <div class="tab-content">
