--- a/index.html
+++ b/index.html
@@ -541,20 +541,12 @@
               <li class="grid-item">
                 <div class="card border-0 border-radius-4px box-shadow-quadruple-large">
                   <div class="blog-image">
-                    <a href="blog-detail.html" class="d-block"><img src="images/blog/blog.jpg" alt="" /></a>
+                    <a href="blog-detail-1.html" class="d-block"><img src="images/blog/blog.jpg" alt="" /></a>
                   </div>
                   <div class="card-body p-13 md-p-11">
-                    <a href="blog-detail.html" class="card-title mb-15px fw-600 fs-20 text-dark-gray d-inline-block">Trends shaping the logistics and transportation industry.</a>
-                    <p>Lorem ipsum has been industry standard dummy text ever...</p>
-                    <div class="author d-flex justify-content-center align-items-center position-relative overflow-hidden fs-16">
-                      <div class="me-auto">
-                        <span class="blog-date d-inline-block text-dark-gray fw-600">30 August 2024</span>
-                        <div class="d-inline-block author-name">By <a href="blog-detail.html" class="text-dark-gray text-decoration-line-bottom fw-600">Den viliamson</a></div>
-                      </div>
-                      <div class="like-count fs-15 fw-600">
-                        <a href="blog-detail.html"><i class="fa-regular fa-heart text-red"></i><span class="text-dark-gray align-middle">65</span></a>
-                      </div>
-                    </div>
+                    <a href="blog-detail-1.html" class="card-title mb-15px fw-600 fs-20 text-dark-gray d-inline-block">Global Pazarın Kapılarını Açmak</a>
+                    <p>Küreselleşen dünyada, sınırların ötesine geçmek ve global pazara açılmak her ölçekten işletme için önemli fırsatlar sunuyor.</p>
+                    <div class="author d-flex justify-content-center align-items-center position-relative overflow-hidden fs-16"></div>
                   </div>
                 </div>
               </li>
@@ -562,20 +554,12 @@
               <li class="grid-item">
                 <div class="card border-0 border-radius-4px box-shadow-quadruple-large">
                   <div class="blog-image">
-                    <a href="blog-detail.html" class="d-block"><img src="images/blog/blog.jpg" alt="" /></a>
+                    <a href="blog-detail-2.html" class="d-block"><img src="images/blog/blog.jpg" alt="" /></a>
                   </div>
                   <div class="card-body p-13 md-p-11">
-                    <a href="blog-detail.html" class="card-title mb-15px fw-600 fs-20 text-dark-gray d-inline-block">Technology integration in logistics processes.</a>
-                    <p>Lorem ipsum has been industry standard dummy text ever...</p>
-                    <div class="author d-flex justify-content-center align-items-center position-relative overflow-hidden fs-16">
-                      <div class="me-auto">
-                        <span class="blog-date d-inline-block text-dark-gray fw-600">28 August 2024</span>
-                        <div class="d-inline-block author-name">By <a href="blog-detail.html" class="text-dark-gray text-decoration-line-bottom fw-600">Hugh macleod</a></div>
-                      </div>
-                      <div class="like-count fs-15 fw-600">
-                        <a href="blog-detail.html"><i class="fa-regular fa-heart text-red"></i><span class="text-dark-gray align-middle">25</span></a>
-                      </div>
-                    </div>
+                    <a href="blog-detail-2.html" class="card-title mb-15px fw-600 fs-20 text-dark-gray d-inline-block">İhracat: Hayallerimizi Gerçeğe Dönüştürme Yolculuğu</a>
+                    <p>İhracat, ilk bakışta çok çekici bir fırsat gibi görünüyor. Hepimizin hayal ettiği büyük başarılar, bu süreçle mümkün hale gelebilir.</p>
+                    <div class="author d-flex justify-content-center align-items-center position-relative overflow-hidden fs-16"></div>
                   </div>
                 </div>
               </li>
@@ -583,20 +567,12 @@
               <li class="grid-item">
                 <div class="card border-0 border-radius-4px box-shadow-quadruple-large">
                   <div class="blog-image">
-                    <a href="blog-detail.html" class="d-block"><img src="images/blog/blog.jpg" alt="" /></a>
+                    <a href="blog-detail-3.html" class="d-block"><img src="images/blog/blog.jpg" alt="" /></a>
                   </div>
                   <div class="card-body p-13 md-p-11">
-                    <a href="blog-detail.html" class="card-title mb-15px fw-600 fs-20 text-dark-gray d-inline-block">Global trade & logistics and transport strategies.</a>
-                    <p>Lorem ipsum has been industry standard dummy text ever...</p>
-                    <div class="author d-flex justify-content-center align-items-center position-relative overflow-hidden fs-16">
-                      <div class="me-auto">
-                        <span class="blog-date d-inline-block text-dark-gray fw-600">26 August 2024</span>
-                        <div class="d-inline-block author-name">By <a href="blog-detail.html" class="text-dark-gray text-decoration-line-bottom fw-600">Walton smith</a></div>
-                      </div>
-                      <div class="like-count fs-15 fw-600">
-                        <a href="blog-detail.html"><i class="fa-regular fa-heart text-red"></i><span class="text-dark-gray align-middle">30</span></a>
-                      </div>
-                    </div>
+                    <a href="blog-detail-3.html" class="card-title mb-15px fw-600 fs-20 text-dark-gray d-inline-block">Dış Ticarette Yeni Trendler</a>
+                    <p>Küreselleşme ve dijitalleşmenin etkisiyle dış ticarette önemli trendler ortaya çıkıyor. İlk olarak, dijitalleşmenin hız kazanmasıyla e-ticaret platformları uluslararası ticarette</p>
+                    <div class="author d-flex justify-content-center align-items-center position-relative overflow-hidden fs-16"></div>
                   </div>
                 </div>
               </li>
