--- a/blog-detail-2.html
+++ b/blog-detail-2.html
@@ -197,18 +197,30 @@
         
         <div class="row justify-content-center" data-anime='{ "el": "childs", "translateY": [50, 0], "opacity": [0,1], "duration": 1200, "delay": 0, "staggervalue": 150, "easing": "easeOutQuad" }'>
           <div class="col-lg-9 last-paragraph-no-margin">
-            <h6 class="fw-600 text-dark-gray ls-minus-05px mb-15px">Strategies for streamlining logistics operations</h6>
-            <p>
-              Dive into the world of efficient global trade and streamlined logistics strategies with this informative blog post. Explore key tactics for optimizing supply chain performance, reducing lead times, and enhancing overall operational efficiency. Learn how businesses can leverage
-              technology, automation, and best practices to streamline their logistics operations and stay ahead in the competitive global marketplace.
+            <h6 class="fw-600 text-dark-gray ls-minus-05px mb-15px">İhracat: Hayallerimizi Gerçeğe Dönüştürme Yolculuğu</h6>
+            <p class="mb-5">
+              İhracat, ilk bakışta çok çekici bir fırsat gibi görünüyor. Hepimizin hayal ettiği büyük başarılar, 
+              bu süreçle mümkün hale gelebilir. Üretim yaparak, ürettiğimiz ürünleri dünyaya tanıtmak ve satmak, 
+              sürdürülebilir bir başarı sağlamak hepimizin hayali.
             </p>
             <p class="mb-5">
-              Explore how businesses can optimize their global trade operations and logistics strategies to achieve greater efficiency, reduce costs, and enhance supply chain performance. This blog post delves into the importance of streamlining logistics processes, leveraging technology for
-              optimization, and implementing efficient global trade practices to drive success in the competitive marketplace.
+              Bir zamanlar sadece bir hayal olan bu vizyon, şimdi ilk meyvelerini vermeye başladı. Sayısız zorluk ve riskle yüzleşerek üretime adım attık. Bu süreç, 
+              hayallerimizin gerçeğe dönüşmesi için gereken cesareti ve kararlılığı gösteriyor.
             </p>
             <p>
-              Unlock the secrets to maximizing efficiency in global trade and logistics operations with this insightful blog post. Discover how businesses can streamline their supply chain processes, eliminate bottlenecks, and enhance operational efficiency through strategic logistics strategies.
-              From optimizing transportation routes to improving inventory management, learn how to streamline your logistics for success.
+              Unutulmaması gereken en önemli şey, hayallerle gerçeklik arasında bir köprü kurmanın harekete geçmekle mümkün olduğudur. 
+              Hayallerimizi gerçekleştirmek için büyük adımlar atmamıza gerek yok; her gün düzenli olarak yaptığımız küçük şeyler 
+              bile bu yolculukta büyük bir fark yaratabilir. Bu küçük adımları bir ritüel haline getirerek, her gün onları artırmak, 
+              hayalimizin gerçeğe dönüşmesini sağlayacak anahtar olacaktır.
+            </p>
+            <p class="mb-5">
+              İhracat yolculuğuna başlayarak, hem kişisel hem de profesyonel hedeflerimize ulaşma konusunda 
+              ilk adımları atmış bulunuyoruz. Hayallerimizi gerçeğe dönüştürmek için her gün daha fazla çaba göstermeye 
+              ve ilerlemeye devam edeceğiz. Bu yolda atılan her adım, bize yeni fırsatlar sunacak ve hayallerimizi daha da ileri taşımak için cesaret verecektir.
+            </p>
+            <p class="mb-5">
+              Hayallerinizi gerçekleştirmek için siz de harekete geçin. Küçük adımlarla başlayın ve her gün daha fazlasını yapmayı 
+              hedefleyin. Unutmayın, başarı, hayalden gerçeğe giden yolculuğunuzda attığınız adımlarla şekillenir.
             </p>
           </div>
         </div>
@@ -233,20 +245,12 @@
               <li class="grid-item">
                 <div class="card border-0 border-radius-4px box-shadow-quadruple-large">
                   <div class="blog-image">
-                    <a href="#" class="d-block"><img src="https://via.placeholder.com/600x430" alt="" /></a>
+                    <a href="blog-detail-1.html" class="d-block"><img src="images/blog/blog.jpg" alt="" /></a>
                   </div>
                   <div class="card-body p-13 md-p-11">
-                    <a href="#" class="card-title mb-15px fw-600 fs-20 text-dark-gray d-inline-block">Trends shaping the logistics and transportation industry.</a>
-                    <p>Lorem ipsum has been industry standard dummy text ever...</p>
-                    <div class="author d-flex justify-content-center align-items-center position-relative overflow-hidden fs-16">
-                      <div class="me-auto">
-                        <span class="blog-date d-inline-block text-dark-gray fw-600">30 Jul 2024</span>
-                        <div class="d-inline-block author-name">By <a href="demo-logistics-latest-blog.html" class="text-dark-gray text-decoration-line-bottom fw-600">Den viliamson</a></div>
-                      </div>
-                      <div class="like-count fs-15 fw-600">
-                        <a href="#"><i class="fa-regular fa-heart text-red"></i><span class="text-dark-gray align-middle">65</span></a>
-                      </div>
-                    </div>
+                    <a href="blog-detail-1.html" class="card-title mb-15px fw-600 fs-20 text-dark-gray d-inline-block">Global Pazarın Kapılarını Açmak</a>
+                    <p>Küreselleşen dünyada, sınırların ötesine geçmek ve global pazara açılmak her ölçekten işletme için önemli fırsatlar sunuyor.</p>
+                    <div class="author d-flex justify-content-center align-items-center position-relative overflow-hidden fs-16"></div>
                   </div>
                 </div>
               </li>
@@ -254,20 +258,12 @@
               <li class="grid-item">
                 <div class="card border-0 border-radius-4px box-shadow-quadruple-large">
                   <div class="blog-image">
-                    <a href="#" class="d-block"><img src="https://via.placeholder.com/600x430" alt="" /></a>
+                    <a href="blog-detail-2.html" class="d-block"><img src="images/blog/blog.jpg" alt="" /></a>
                   </div>
                   <div class="card-body p-13 md-p-11">
-                    <a href="#" class="card-title mb-15px fw-600 fs-20 text-dark-gray d-inline-block">Technology integration in logistics processes.</a>
-                    <p>Lorem ipsum has been industry standard dummy text ever...</p>
-                    <div class="author d-flex justify-content-center align-items-center position-relative overflow-hidden fs-16">
-                      <div class="me-auto">
-                        <span class="blog-date d-inline-block text-dark-gray fw-600">28 Jul 2024</span>
-                        <div class="d-inline-block author-name">By <a href="demo-logistics-latest-blog.html" class="text-dark-gray text-decoration-line-bottom fw-600">Hugh macleod</a></div>
-                      </div>
-                      <div class="like-count fs-15 fw-600">
-                        <a href="#"><i class="fa-regular fa-heart text-red"></i><span class="text-dark-gray align-middle">25</span></a>
-                      </div>
-                    </div>
+                    <a href="blog-detail-2.html" class="card-title mb-15px fw-600 fs-20 text-dark-gray d-inline-block">İhracat: Hayallerimizi Gerçeğe Dönüştürme Yolculuğu</a>
+                    <p>İhracat, ilk bakışta çok çekici bir fırsat gibi görünüyor. Hepimizin hayal ettiği büyük başarılar, bu süreçle mümkün hale gelebilir.</p>
+                    <div class="author d-flex justify-content-center align-items-center position-relative overflow-hidden fs-16"></div>
                   </div>
                 </div>
               </li>
@@ -275,20 +271,12 @@
               <li class="grid-item">
                 <div class="card border-0 border-radius-4px box-shadow-quadruple-large">
                   <div class="blog-image">
-                    <a href="#" class="d-block"><img src="https://via.placeholder.com/600x430" alt="" /></a>
+                    <a href="blog-detail-3.html" class="d-block"><img src="images/blog/blog.jpg" alt="" /></a>
                   </div>
                   <div class="card-body p-13 md-p-11">
-                    <a href="#" class="card-title mb-15px fw-600 fs-20 text-dark-gray d-inline-block">Global trade and logistics and transportation strategies.</a>
-                    <p>Lorem ipsum has been industry standard dummy text ever...</p>
-                    <div class="author d-flex justify-content-center align-items-center position-relative overflow-hidden fs-16">
-                      <div class="me-auto">
-                        <span class="blog-date d-inline-block text-dark-gray fw-600">26 Jul 2024</span>
-                        <div class="d-inline-block author-name">By <a href="demo-logistics-latest-blog.html" class="text-dark-gray text-decoration-line-bottom fw-600">Walton smith</a></div>
-                      </div>
-                      <div class="like-count fs-15 fw-600">
-                        <a href="#"><i class="fa-regular fa-heart text-red"></i><span class="text-dark-gray align-middle">30</span></a>
-                      </div>
-                    </div>
+                    <a href="blog-detail-3.html" class="card-title mb-15px fw-600 fs-20 text-dark-gray d-inline-block">Dış Ticarette Yeni Trendler</a>
+                    <p>Küreselleşme ve dijitalleşmenin etkisiyle dış ticarette önemli trendler ortaya çıkıyor. İlk olarak, dijitalleşmenin hız kazanmasıyla e-ticaret platformları uluslararası ticarette</p>
+                    <div class="author d-flex justify-content-center align-items-center position-relative overflow-hidden fs-16"></div>
                   </div>
                 </div>
               </li>
