--- a/blog-detail-1.html
+++ b/blog-detail-1.html
@@ -197,18 +197,35 @@
         
         <div class="row justify-content-center" data-anime='{ "el": "childs", "translateY": [50, 0], "opacity": [0,1], "duration": 1200, "delay": 0, "staggervalue": 150, "easing": "easeOutQuad" }'>
           <div class="col-lg-9 last-paragraph-no-margin">
-            <h6 class="fw-600 text-dark-gray ls-minus-05px mb-15px">Strategies for streamlining logistics operations</h6>
-            <p>
-              Dive into the world of efficient global trade and streamlined logistics strategies with this informative blog post. Explore key tactics for optimizing supply chain performance, reducing lead times, and enhancing overall operational efficiency. Learn how businesses can leverage
-              technology, automation, and best practices to streamline their logistics operations and stay ahead in the competitive global marketplace.
+            <h6 class="fw-600 text-dark-gray ls-minus-05px mb-15px">Global Pazarın Kapılarını Açmak</h6>
+            <p class="mb-5">
+              Küreselleşen dünyada, sınırların ötesine geçmek ve global pazara açılmak her ölçekten işletme için önemli fırsatlar sunuyor. 
+              Artan dijitalleşme, iletişim kanallarının gelişimi ve lojistik ağlarının genişlemesi, firmalara farklı coğrafyalarda yeni müşterilere 
+              ulaşma imkânı sağlıyor. Ancak global pazarda başarılı olabilmek için iyi bir strateji, doğru bilgi ve sağlam bir hazırlık süreci gerekiyor.
             </p>
             <p class="mb-5">
-              Explore how businesses can optimize their global trade operations and logistics strategies to achieve greater efficiency, reduce costs, and enhance supply chain performance. This blog post delves into the importance of streamlining logistics processes, leveraging technology for
-              optimization, and implementing efficient global trade practices to drive success in the competitive marketplace.
+              İlk adım olarak, hedef pazarın dinamiklerini anlamak kritik önem taşır. Kültürel farklılıklar, yerel 
+              tüketici alışkanlıkları, yasal düzenlemeler ve rekabet ortamı gibi unsurlar, ürünlerin nasıl konumlandırılacağını belirler. 
+              Örneğin, bir ülkede popüler olan bir ürün, başka bir coğrafyada aynı ilgiyi görmeyebilir. Bu nedenle, pazar araştırmalarına yatırım 
+              yapmak ve doğru iş ortakları ile çalışmak global başarıya ulaşmak için şarttır.
             </p>
             <p>
-              Unlock the secrets to maximizing efficiency in global trade and logistics operations with this insightful blog post. Discover how businesses can streamline their supply chain processes, eliminate bottlenecks, and enhance operational efficiency through strategic logistics strategies.
-              From optimizing transportation routes to improving inventory management, learn how to streamline your logistics for success.
+              Dijital pazarlama da globalleşmenin anahtar araçlarından biri 
+              haline gelmiştir. E-ticaret platformları, sosyal medya kampanyaları ve arama motoru optimizasyonu (SEO) gibi dijital stratejiler, 
+              sınırları aşarak geniş bir müşteri kitlesine ulaşmayı mümkün kılar. Ürünlerinizi tanıttığınız dilin doğru kullanımı ve kültürel 
+              hassasiyetlere uygun bir marka iletişimi, marka güvenini artırır ve müşteri sadakati sağlar.
+            </p>
+            <p class="mb-5">
+              Bununla birlikte, operasyonel süreçleri iyi yönetmek de büyük önem taşır. Lojistik, gümrük işlemleri ve uluslararası 
+              ödeme yöntemleri gibi konularda doğru adımlar atmak, müşteri memnuniyetini sağlamak açısından gereklidir. Global ticaret aynı 
+              zamanda, döviz dalgalanmaları ve uluslararası ticaret politikalarından kaynaklanan riskleri de içerir. Bu nedenle finansal riskleri 
+              öngörmek ve buna göre stratejiler geliştirmek işletmeler için önemli bir avantaj sağlar.
+            </p>
+            <p class="mb-5">
+              Sonuç olarak, global pazara açılmak hem büyük fırsatlar hem de belirli riskler içerir. 
+              Ancak güçlü bir strateji, doğru iş ortaklıkları ve dijital araçların etkin kullanımı sayesinde, işletmeler bu 
+              zorlukların üstesinden gelebilir. Dünyanın farklı köşelerine ulaşmak ve sürdürülebilir bir büyüme elde etmek isteyen her 
+              işletme, küresel oyuna hazırlıklı bir şekilde adım atmalıdır.
             </p>
           </div>
         </div>
@@ -233,20 +250,12 @@
               <li class="grid-item">
                 <div class="card border-0 border-radius-4px box-shadow-quadruple-large">
                   <div class="blog-image">
-                    <a href="#" class="d-block"><img src="https://via.placeholder.com/600x430" alt="" /></a>
+                    <a href="blog-detail-1.html" class="d-block"><img src="images/blog/blog.jpg" alt="" /></a>
                   </div>
                   <div class="card-body p-13 md-p-11">
-                    <a href="#" class="card-title mb-15px fw-600 fs-20 text-dark-gray d-inline-block">Trends shaping the logistics and transportation industry.</a>
-                    <p>Lorem ipsum has been industry standard dummy text ever...</p>
-                    <div class="author d-flex justify-content-center align-items-center position-relative overflow-hidden fs-16">
-                      <div class="me-auto">
-                        <span class="blog-date d-inline-block text-dark-gray fw-600">30 Jul 2024</span>
-                        <div class="d-inline-block author-name">By <a href="demo-logistics-latest-blog.html" class="text-dark-gray text-decoration-line-bottom fw-600">Den viliamson</a></div>
-                      </div>
-                      <div class="like-count fs-15 fw-600">
-                        <a href="#"><i class="fa-regular fa-heart text-red"></i><span class="text-dark-gray align-middle">65</span></a>
-                      </div>
-                    </div>
+                    <a href="blog-detail-1.html" class="card-title mb-15px fw-600 fs-20 text-dark-gray d-inline-block">Global Pazarın Kapılarını Açmak</a>
+                    <p>Küreselleşen dünyada, sınırların ötesine geçmek ve global pazara açılmak her ölçekten işletme için önemli fırsatlar sunuyor.</p>
+                    <div class="author d-flex justify-content-center align-items-center position-relative overflow-hidden fs-16"></div>
                   </div>
                 </div>
               </li>
@@ -254,20 +263,12 @@
               <li class="grid-item">
                 <div class="card border-0 border-radius-4px box-shadow-quadruple-large">
                   <div class="blog-image">
-                    <a href="#" class="d-block"><img src="https://via.placeholder.com/600x430" alt="" /></a>
+                    <a href="blog-detail-2.html" class="d-block"><img src="images/blog/blog.jpg" alt="" /></a>
                   </div>
                   <div class="card-body p-13 md-p-11">
-                    <a href="#" class="card-title mb-15px fw-600 fs-20 text-dark-gray d-inline-block">Technology integration in logistics processes.</a>
-                    <p>Lorem ipsum has been industry standard dummy text ever...</p>
-                    <div class="author d-flex justify-content-center align-items-center position-relative overflow-hidden fs-16">
-                      <div class="me-auto">
-                        <span class="blog-date d-inline-block text-dark-gray fw-600">28 Jul 2024</span>
-                        <div class="d-inline-block author-name">By <a href="demo-logistics-latest-blog.html" class="text-dark-gray text-decoration-line-bottom fw-600">Hugh macleod</a></div>
-                      </div>
-                      <div class="like-count fs-15 fw-600">
-                        <a href="#"><i class="fa-regular fa-heart text-red"></i><span class="text-dark-gray align-middle">25</span></a>
-                      </div>
-                    </div>
+                    <a href="blog-detail-2.html" class="card-title mb-15px fw-600 fs-20 text-dark-gray d-inline-block">İhracat: Hayallerimizi Gerçeğe Dönüştürme Yolculuğu</a>
+                    <p>İhracat, ilk bakışta çok çekici bir fırsat gibi görünüyor. Hepimizin hayal ettiği büyük başarılar, bu süreçle mümkün hale gelebilir.</p>
+                    <div class="author d-flex justify-content-center align-items-center position-relative overflow-hidden fs-16"></div>
                   </div>
                 </div>
               </li>
@@ -275,20 +276,12 @@
               <li class="grid-item">
                 <div class="card border-0 border-radius-4px box-shadow-quadruple-large">
                   <div class="blog-image">
-                    <a href="#" class="d-block"><img src="https://via.placeholder.com/600x430" alt="" /></a>
+                    <a href="blog-detail-3.html" class="d-block"><img src="images/blog/blog.jpg" alt="" /></a>
                   </div>
                   <div class="card-body p-13 md-p-11">
-                    <a href="#" class="card-title mb-15px fw-600 fs-20 text-dark-gray d-inline-block">Global trade and logistics and transportation strategies.</a>
-                    <p>Lorem ipsum has been industry standard dummy text ever...</p>
-                    <div class="author d-flex justify-content-center align-items-center position-relative overflow-hidden fs-16">
-                      <div class="me-auto">
-                        <span class="blog-date d-inline-block text-dark-gray fw-600">26 Jul 2024</span>
-                        <div class="d-inline-block author-name">By <a href="demo-logistics-latest-blog.html" class="text-dark-gray text-decoration-line-bottom fw-600">Walton smith</a></div>
-                      </div>
-                      <div class="like-count fs-15 fw-600">
-                        <a href="#"><i class="fa-regular fa-heart text-red"></i><span class="text-dark-gray align-middle">30</span></a>
-                      </div>
-                    </div>
+                    <a href="blog-detail-3.html" class="card-title mb-15px fw-600 fs-20 text-dark-gray d-inline-block">Dış Ticarette Yeni Trendler</a>
+                    <p>Küreselleşme ve dijitalleşmenin etkisiyle dış ticarette önemli trendler ortaya çıkıyor. İlk olarak, dijitalleşmenin hız kazanmasıyla e-ticaret platformları uluslararası ticarette</p>
+                    <div class="author d-flex justify-content-center align-items-center position-relative overflow-hidden fs-16"></div>
                   </div>
                 </div>
               </li>
