--- a/single-product.html
+++ b/single-product.html
@@ -84,7 +84,7 @@
                           </a>
                           <a href="shop.html" class="btn btn-hover-animation text-uppercase-inherit fw-600 ls-0px justify-content-center">
                             <span>
-                              <span class="btn-text text-dark-gray fs-16">Ürün-1</span>
+                              <span class="btn-text text-dark-gray fs-16">Ayakkabı</span>
                               <span class="btn-icon"><i class="fa-solid fa-arrow-right m-0"></i></span>
                             </span>
                           </a>
@@ -95,7 +95,7 @@
                           </a>
                           <a href="shop.html" class="btn btn-hover-animation text-uppercase-inherit fw-600 ls-0px justify-content-center">
                             <span>
-                              <span class="btn-text text-dark-gray fs-16">Ürün-2</span>
+                              <span class="btn-text text-dark-gray fs-16">Gıda</span>
                               <span class="btn-icon"><i class="fa-solid fa-arrow-right m-0"></i></span>
                             </span>
                           </a>
@@ -106,7 +106,7 @@
                           </a>
                           <a href="shop.html" class="btn btn-hover-animation text-uppercase-inherit fw-600 ls-0px justify-content-center">
                             <span>
-                              <span class="btn-text text-dark-gray fs-16">Ürün-3</span>
+                              <span class="btn-text text-dark-gray fs-16">Aksesuar</span>
                               <span class="btn-icon"><i class="fa-solid fa-arrow-right m-0"></i></span>
                             </span>
                           </a>
@@ -117,29 +117,7 @@
                           </a>
                           <a href="shop.html" class="btn btn-hover-animation text-uppercase-inherit fw-600 ls-0px justify-content-center">
                             <span>
-                              <span class="btn-text text-dark-gray fs-16">Ürün-4</span>
-                              <span class="btn-icon"><i class="fa-solid fa-arrow-right m-0"></i></span>
-                            </span>
-                          </a>
-                        </div>
-                        <div class="col md-mb-30px">
-                          <a href="shop.html" class="text-center">
-                            <img src="images/header/header-5.jpg" alt="" />
-                          </a>
-                          <a href="shop.html" class="btn btn-hover-animation text-uppercase-inherit fw-600 ls-0px justify-content-center">
-                            <span>
-                              <span class="btn-text text-dark-gray fs-16">Ürün-5</span>
-                              <span class="btn-icon"><i class="fa-solid fa-arrow-right m-0"></i></span>
-                            </span>
-                          </a>
-                        </div>
-                        <div class="col md-mb-30px">
-                          <a href="shop.html" class="text-center">
-                            <img src="images/header/header-6.jpg" alt="" />
-                          </a>
-                          <a href="shop.html" class="btn btn-hover-animation text-uppercase-inherit fw-600 ls-0px justify-content-center">
-                            <span>
-                              <span class="btn-text text-dark-gray fs-16">Ürün-6</span>
+                              <span class="btn-text text-dark-gray fs-16">Endüstiriyel Ürünler</span>
                               <span class="btn-icon"><i class="fa-solid fa-arrow-right m-0"></i></span>
                             </span>
                           </a>
