--- a/blog.html
+++ b/blog.html
@@ -183,7 +183,7 @@
               <li class="grid-item">
                 <div class="card border-0 border-radius-4px box-shadow-quadruple-large">
                   <div class="blog-image">
-                    <a href="blog-detail-1.html" class="d-block"><img src="images/blog/blog.jpg" alt="" /></a>
+                    <a href="blog-detail-1.html" class="d-block"><img src="images/blog/blog-1.jpg" alt="" /></a>
                   </div>
                   <div class="card-body p-13 md-p-11">
                     <a href="blog-detail-1.html" class="card-title mb-15px fw-600 fs-20 text-dark-gray d-inline-block">Global Pazarın Kapılarını Açmak</a>
@@ -196,7 +196,7 @@
               <li class="grid-item">
                 <div class="card border-0 border-radius-4px box-shadow-quadruple-large">
                   <div class="blog-image">
-                    <a href="blog-detail-2.html" class="d-block"><img src="images/blog/blog.jpg" alt="" /></a>
+                    <a href="blog-detail-2.html" class="d-block"><img src="images/blog/blog-2.jpg" alt="" /></a>
                   </div>
                   <div class="card-body p-13 md-p-11">
                     <a href="blog-detail-2.html" class="card-title mb-15px fw-600 fs-20 text-dark-gray d-inline-block">İhracat: Hayallerimizi Gerçeğe Dönüştürme Yolculuğu</a>
@@ -209,7 +209,7 @@
               <li class="grid-item">
                 <div class="card border-0 border-radius-4px box-shadow-quadruple-large">
                   <div class="blog-image">
-                    <a href="blog-detail-3.html" class="d-block"><img src="images/blog/blog.jpg" alt="" /></a>
+                    <a href="blog-detail-3.html" class="d-block"><img src="images/blog/blog-3.jpg" alt="" /></a>
                   </div>
                   <div class="card-body p-13 md-p-11">
                     <a href="blog-detail-3.html" class="card-title mb-15px fw-600 fs-20 text-dark-gray d-inline-block">Dış Ticarette Yeni Trendler</a>
