--- a/blog-detail-3.html
+++ b/blog-detail-3.html
@@ -170,7 +170,7 @@
     <section class="half-section">
       <div class="container">
         <div class="description__img">
-          <img src="https://lipsum.app/1000x667" alt="">
+          <img src="images/blog/blog-3.1.jpg" alt="">
         </div>
         
         <div class="row justify-content-center" data-anime='{ "el": "childs", "translateY": [50, 0], "opacity": [0,1], "duration": 1200, "delay": 0, "staggervalue": 150, "easing": "easeOutQuad" }'>
@@ -218,7 +218,7 @@
               <li class="grid-item">
                 <div class="card border-0 border-radius-4px box-shadow-quadruple-large">
                   <div class="blog-image">
-                    <a href="blog-detail-1.html" class="d-block"><img src="images/blog/blog.jpg" alt="" /></a>
+                    <a href="blog-detail-1.html" class="d-block"><img src="images/blog/blog-1.jpg" alt="" /></a>
                   </div>
                   <div class="card-body p-13 md-p-11">
                     <a href="blog-detail-1.html" class="card-title mb-15px fw-600 fs-20 text-dark-gray d-inline-block">Global Pazarın Kapılarını Açmak</a>
@@ -231,7 +231,7 @@
               <li class="grid-item">
                 <div class="card border-0 border-radius-4px box-shadow-quadruple-large">
                   <div class="blog-image">
-                    <a href="blog-detail-2.html" class="d-block"><img src="images/blog/blog.jpg" alt="" /></a>
+                    <a href="blog-detail-2.html" class="d-block"><img src="images/blog/blog-2.jpg" alt="" /></a>
                   </div>
                   <div class="card-body p-13 md-p-11">
                     <a href="blog-detail-2.html" class="card-title mb-15px fw-600 fs-20 text-dark-gray d-inline-block">İhracat: Hayallerimizi Gerçeğe Dönüştürme Yolculuğu</a>
@@ -244,7 +244,7 @@
               <li class="grid-item">
                 <div class="card border-0 border-radius-4px box-shadow-quadruple-large">
                   <div class="blog-image">
-                    <a href="blog-detail-3.html" class="d-block"><img src="images/blog/blog.jpg" alt="" /></a>
+                    <a href="blog-detail-3.html" class="d-block"><img src="images/blog/blog-3.jpg" alt="" /></a>
                   </div>
                   <div class="card-body p-13 md-p-11">
                     <a href="blog-detail-3.html" class="card-title mb-15px fw-600 fs-20 text-dark-gray d-inline-block">Dış Ticarette Yeni Trendler</a>
