--- a/shop.html
+++ b/shop.html
@@ -176,7 +176,7 @@
                 <div class="shop-box mb-10px">
                   <div class="shop-image mb-20px">
                     <a href="single-product.html">
-                      <img src="https://lipsum.app/600x765" alt="" />
+                      <img src="images/ürünler/ayakkabi.jpg" alt="" />
                       <div class="shop-overlay bg-gradient-gray-light-dark-transparent"></div>
                     </a>
                   </div>
@@ -190,7 +190,7 @@
                 <div class="shop-box mb-10px">
                   <div class="shop-image mb-20px">
                     <a href="single-product.html">
-                      <img src="https://lipsum.app/600x765" alt="" />
+                      <img src="images/ürünler/lokum.jpg" alt="" />
                       <div class="shop-overlay bg-gradient-gray-light-dark-transparent"></div>
                     </a>
                   </div>
@@ -204,7 +204,7 @@
                 <div class="shop-box mb-10px">
                   <div class="shop-image mb-20px">
                     <a href="single-product.html">
-                      <img src="https://lipsum.app/600x765" alt="" />
+                      <img src="images/ürünler/makarna.jpg" alt="" />
                       <div class="shop-overlay bg-gradient-gray-light-dark-transparent"></div>
                     </a>
                   </div>
@@ -218,12 +218,12 @@
                 <div class="shop-box mb-10px">
                   <div class="shop-image mb-20px">
                     <a href="single-product.html">
-                      <img src="https://lipsum.app/600x765" alt="" />
+                      <img src="images/ürünler/canta.jpg" alt="" />
                       <div class="shop-overlay bg-gradient-gray-light-dark-transparent"></div>
                     </a>
                   </div>
                   <div class="shop-footer text-center">
-                    <a href="single-product.html" class="alt-font text-dark-gray fs-19 fw-500">Sandalet</a>
+                    <a href="single-product.html" class="alt-font text-dark-gray fs-19 fw-500">Deri Çanta</a>
                   </div>
                 </div>
               </li>
@@ -232,105 +232,7 @@
                 <div class="shop-box mb-10px">
                   <div class="shop-image mb-20px">
                     <a href="single-product.html">
-                      <img src="https://lipsum.app/600x765" alt="" />
-                      <div class="shop-overlay bg-gradient-gray-light-dark-transparent"></div>
-                    </a>
-                  </div>
-                  <div class="shop-footer text-center">
-                    <a href="single-product.html" class="alt-font text-dark-gray fs-19 fw-500">Ayakkabı</a>
-                  </div>
-                </div>
-              </li>
-
-              <li class="grid-item">
-                <div class="shop-box mb-10px">
-                  <div class="shop-image mb-20px">
-                    <a href="single-product.html">
-                      <img src="https://lipsum.app/600x765" alt="" />
-                      <div class="shop-overlay bg-gradient-gray-light-dark-transparent"></div>
-                    </a>
-                  </div>
-                  <div class="shop-footer text-center">
-                    <a href="single-product.html" class="alt-font text-dark-gray fs-19 fw-500">Lokum</a>
-                  </div>
-                </div>
-              </li>
-
-              <li class="grid-item">
-                <div class="shop-box mb-10px">
-                  <div class="shop-image mb-20px">
-                    <a href="single-product.html">
-                      <img src="https://lipsum.app/600x765" alt="" />
-                      <div class="shop-overlay bg-gradient-gray-light-dark-transparent"></div>
-                    </a>
-                  </div>
-                  <div class="shop-footer text-center">
-                    <a href="single-product.html" class="alt-font text-dark-gray fs-19 fw-500">Makarna</a>
-                  </div>
-                </div>
-              </li>
-
-              <li class="grid-item">
-                <div class="shop-box mb-10px">
-                  <div class="shop-image mb-20px">
-                    <a href="single-product.html">
-                      <img src="https://lipsum.app/600x765" alt="" />
-                      <div class="shop-overlay bg-gradient-gray-light-dark-transparent"></div>
-                    </a>
-                  </div>
-                  <div class="shop-footer text-center">
-                    <a href="single-product.html" class="alt-font text-dark-gray fs-19 fw-500">Sandalet</a>
-                  </div>
-                </div>
-              </li>
-
-              <li class="grid-item">
-                <div class="shop-box mb-10px">
-                  <div class="shop-image mb-20px">
-                    <a href="single-product.html">
-                      <img src="https://lipsum.app/600x765" alt="" />
-                      <div class="shop-overlay bg-gradient-gray-light-dark-transparent"></div>
-                    </a>
-                  </div>
-                  <div class="shop-footer text-center">
-                    <a href="single-product.html" class="alt-font text-dark-gray fs-19 fw-500">Ayakkabı</a>
-                  </div>
-                </div>
-              </li>
-
-              <li class="grid-item">
-                <div class="shop-box mb-10px">
-                  <div class="shop-image mb-20px">
-                    <a href="single-product.html">
-                      <img src="https://lipsum.app/600x765" alt="" />
-                      <div class="shop-overlay bg-gradient-gray-light-dark-transparent"></div>
-                    </a>
-                  </div>
-                  <div class="shop-footer text-center">
-                    <a href="single-product.html" class="alt-font text-dark-gray fs-19 fw-500">Lokum</a>
-                  </div>
-                </div>
-              </li>
-
-              <li class="grid-item">
-                <div class="shop-box mb-10px">
-                  <div class="shop-image mb-20px">
-                    <a href="single-product.html">
-                      <img src="https://lipsum.app/600x765" alt="" />
-                      <div class="shop-overlay bg-gradient-gray-light-dark-transparent"></div>
-                    </a>
-                  </div>
-                  <div class="shop-footer text-center">
-                    <a href="single-product.html" class="alt-font text-dark-gray fs-19 fw-500">Makarna</a>
-                  </div>
-                </div>
-              </li>
-
-              <li class="grid-item">
-                <div class="shop-box mb-10px">
-                  <div class="shop-image mb-20px">
-                    <a href="single-product.html">
-                      <img src="https://lipsum.app/600x765" alt="" />
+                      <img src="images/ürünler/sandalet.jpg" alt="" />
                       <div class="shop-overlay bg-gradient-gray-light-dark-transparent"></div>
                     </a>
                   </div>
@@ -346,16 +248,16 @@
               <span class="alt-font fw-500 fs-19 text-dark-gray d-block mb-10px">Kategoriler</span>
               <ul class="shop-filter category-filter fs-16">
                 <li>
-                  <a href="#"><span class="product-cb product-category-cb"></span>Ayakkabı</a><span class="item-qty">5</span>
+                  <a href="#"><span class="product-cb product-category-cb"></span>Ayakkabı</a><span class="item-qty">2</span>
                 </li>
                 <li>
-                  <a href="#"><span class="product-cb product-category-cb"></span>Makarna</a><span class="item-qty">5</span>
+                  <a href="#"><span class="product-cb product-category-cb"></span>Gıda</a><span class="item-qty">2</span>
                 </li>
                 <li>
-                  <a href="#"><span class="product-cb product-category-cb"></span>Lokum</a><span class="item-qty">5</span>
+                  <a href="#"><span class="product-cb product-category-cb"></span>Aksesuar</a><span class="item-qty">1</span>
                 </li>
                 <li>
-                  <a href="#"><span class="product-cb product-category-cb"></span>Sandalet</a><span class="item-qty">5</span>
+                  <a href="#"><span class="product-cb product-category-cb"></span>Endüstiriyel Ürünler</a><span class="item-qty">1</span>
                 </li>
               </ul>
             </div>
