--- a/blog-detail-1.html
+++ b/blog-detail-1.html
@@ -84,7 +84,7 @@
                       <div class="row row-cols-2 row-cols-lg-6 row-cols-sm-3 md-pt-15px align-items-center justify-content-center mb-60px md-mb-30px sm-mb-0">
                         <div class="col md-mb-30px">
                           <a href="shop.html" class="text-center">
-                            <img src="images/header/header-1.jpg" alt="" />
+                            <img src="images/header/ayakakbi.jpg" alt="" />
                           </a>
                           <a href="shop.html" class="btn btn-hover-animation text-uppercase-inherit fw-600 ls-0px justify-content-center">
                             <span>
@@ -95,7 +95,7 @@
                         </div>
                         <div class="col md-mb-30px">
                           <a href="shop.html" class="text-center">
-                            <img src="images/header/header-2.jpg" alt="" />
+                            <img src="images/header/gida.jpg" alt="" />
                           </a>
                           <a href="shop.html" class="btn btn-hover-animation text-uppercase-inherit fw-600 ls-0px justify-content-center">
                             <span>
@@ -106,7 +106,7 @@
                         </div>
                         <div class="col md-mb-30px">
                           <a href="shop.html" class="text-center">
-                            <img src="images/header/header-3.jpg" alt="" />
+                            <img src="images/header/aksesuar.jpg" alt="" />
                           </a>
                           <a href="shop.html" class="btn btn-hover-animation text-uppercase-inherit fw-600 ls-0px justify-content-center">
                             <span>
@@ -117,11 +117,11 @@
                         </div>
                         <div class="col md-mb-30px">
                           <a href="shop.html" class="text-center">
-                            <img src="images/header/header-4.jpg" alt="" />
+                            <img src="images/header/endüstriyel.jpg" alt="" />
                           </a>
                           <a href="shop.html" class="btn btn-hover-animation text-uppercase-inherit fw-600 ls-0px justify-content-center">
                             <span>
-                              <span class="btn-text text-dark-gray fs-16">Endüstiriyel Ürünler</span>
+                              <span class="btn-text text-dark-gray fs-16">Endüstiriyel</span>
                               <span class="btn-icon"><i class="fa-solid fa-arrow-right m-0"></i></span>
                             </span>
                           </a>
