--- a/contact.html
+++ b/contact.html
@@ -203,7 +203,7 @@
                 <div class="feature-box-content">
                   <span class="d-block text-dark-gray fw-600 fs-18 ls-minus-05px mb-5px">Telefon</span>
                   <div class="w-100 d-block">
-                    <span class="d-block"><a href="tel:+905555555555">+90 555 555 55 55</a></span>
+                    <span class="d-block"><a href="tel:+905374701371">+90 537 470 13 71</a></span>
                   </div>
                 </div>
               </div>
@@ -290,7 +290,7 @@
             <span class="fs-16 alt-font fw-500 d-block text-white mb-5px">İLetişim</span>
             <ul>
               <li>
-                <a href="#" class="footer__icons--gap"><i class="bi bi-telephone"></i>0555 555 55 55</a>
+                <a href="#" class="footer__icons--gap"><i class="bi bi-telephone"></i>+90 537 470 13 71</a>
               </li>
               <li>
                 <a href="#" class="footer__icons--gap"><i class="bi bi-envelope"></i>info@azmdisitcaret.com</a>
