--- a/blog-detail-2.html
+++ b/blog-detail-2.html
@@ -34,7 +34,7 @@
         <div class="container-fluid">
           <div class="row h-45px align-items-center m-0">
             <div class="col-lg-6 col-md-6 text-center text-md-start">
-              <a href="contact.html" class="widget fs-13 text-white fw-600 me-25px md-me-15px text-white"><i class="feather icon-feather-phone-call"></i>0555 555 55 55</a>
+              <a href="contact.html" class="widget fs-13 text-white fw-600 me-25px md-me-15px text-white"><i class="feather icon-feather-phone-call"></i>+90 537 470 13 71</a>
               <a href="contact.html" class="widget fs-13 text-white alt-font me-25px fw-600 d-none d-lg-inline-block"><i class="bi bi-envelope"></i>info@azmdisticaret.com</a>
             </div>
             <div class="col-lg-6 col-md-6 text-center text-md-end topbar__flag">
@@ -307,7 +307,7 @@
             <span class="fs-16 alt-font fw-500 d-block text-white mb-5px">İLetişim</span>
             <ul>
               <li>
-                <a href="#" class="footer__icons--gap"><i class="bi bi-telephone"></i>0555 555 55 55</a>
+                <a href="#" class="footer__icons--gap"><i class="bi bi-telephone"></i>+90 537 470 13 71</a>
               </li>
               <li>
                 <a href="#" class="footer__icons--gap"><i class="bi bi-envelope"></i>info@azmdisitcaret.com</a>
